# simple_game_framework

./: LICENSE  README.md  pyproject.toml
src/sdl-lib/: cmult.c  cmult.h
src/simple_game_framework/: __init__.py  base.py
src/simple_game_framework_spookyboi/: __init__.py  base.py  main.py
